# n_body_problem_solver

./: .gitignore  README.md
client/: client.py  generate_grpc_client.sh  requirements.in  requirements.txt
server/: CMakeLists.txt  Dockerfile
server/include/gpu/: n_body_problem_solver.h
server/proto/: n_body_problem.proto
server/src/: server.cpp
server/src/gpu/: n_body_problem_solver.cu
